add OMA as an acronym

--- a/manuscript/acronyms.tex
+++ b/manuscript/acronyms.tex
@@ -15,6 +15,7 @@
 \DeclareAcronym{FDR}{short=FDR,long={False Discovery Rate}}
 \DeclareAcronym{gsea}{short=GSEA,long={gene set enrichment analysis}}
 \DeclareAcronym{FPKM}{short=FPKM,long={Fragments Per Kilobase of exon per Million reads}}
+\DeclareAcronym{OMA}{short=OMA,long={Orthologous MAtrix project}}
 \DeclareAcronym{HSD3B1}{short=\textit{HSD3B1},long={hydroxy-δ-5-steroid dehydrogenase, 3 β- and steroid δ-isomerase 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=HSD3B1}{\textit{HSD3B1}} (hydroxy-δ-5-steroid dehydrogenase, 3 β- and steroid δ-isomerase 1)}}
 \DeclareAcronym{CSH1}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CSH1}{\textit{CSH1}},long={chorionic somatomammotropin hormone 1},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CSH1}{\textit{CSH1}} (chorionic somatomammotropin hormone 1)}}
 \DeclareAcronym{CSH2}{short=\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CSH2}{\textit{CSH2}},long={chorionic somatomammotropin hormone 2},first-style=reversed,single={\href{http://www.genenames.org/cgi-bin/gene_symbol_report?match=CSH2}{\textit{CSH2}} (chorionic somatomammotropin hormone 2)}}
