--- a/manuscript/manuscript.Rnw
+++ b/manuscript/manuscript.Rnw
@@ -1136,19 +1136,22 @@ setnames(cpt.distribution.shape,
 @ 
 
 \begin{figure}[tbh]
-<<core.placenta.transcriptome,fig.width=9/2.5,fig.height=8,out.width="90mm",out.height="0.8\\textheight",echo=FALSE>>=
+<<core.placenta.transcriptome,fig.width=19/2.5,fig.height=6,out.width="190mm",echo=FALSE>>=
 cptl <-
     core.placenta.transcriptome.long[!grepl("(min|median|max|all)_expression|all_but_",
                                             Species) & housekeeping==FALSE,]
 cptl <- cptl[,Species:=factor(gsub("^([^ ])[^ ]* +([^ ]*)","\\1. \\2",capfirst(Species)),
                               levels=gsub("^([^ ])[^ ]* +([^ ]*)","\\1. \\2",
                                           capfirst(names(species.names))))]
-
+cptl <- cptl[,median_FPKM:=median(FPKM),by=human_name]
+cptl <- cptl[,facet:="high"]
+cptl <- cptl[median_FPKM < median(median_FPKM),facet:="low"]
 print(ggplot(cptl[FPKM > 0.1,],aes(x=human_name,y=FPKM))+
       geom_boxplot(outlier.shape=NA)+
-      scale_y_log10(labels=trans_format("log10", math_format(10^.x)))+
+      scale_y_log10(breaks=c(10^1,10^2,10^3,10^4),
+                    labels=trans_format("log10", math_format(10^.x)))+
       geom_point(aes(color=Species,shape=Species))+
-      scale_shape_manual("Species",
+      scale_shape_manual(NULL,##"Species",
                          guide=guide_legend(#nrow=1,
                                             keywidth=unit(3,"mm"),
                                             keyheight=unit(3,"mm"),
@@ -1158,18 +1161,24 @@ print(ggplot(cptl[FPKM > 0.1,],aes(x=human_name,y=FPKM))+
                                             title.position="top"
                                             ),
                          values=0:18)+
-      # scale_color_discrete(NULL)+
+      scale_color_discrete(NULL)+
       coord_flip()+
       xlab("Human Ortholog Name")+
       ylab("Gene Expression (FPKM)")+
       theme_bw() +
-      theme(text=element_text(size=9),
-            legend.position=c(0.99,0.41),
-            axis.text.y=element_text(face="italic",size=7),
-            legend.margin=unit(0,"mm"),
-            legend.justification=c(1,1),
-            plot.margin=unit(c(0,0,0,0),"mm")
-            ))
+      expand_limits(y=c(10^4)) + 
+      theme(text=element_text(size=7.5),
+            legend.position=c(0.99,0.01),
+            axis.text.y=element_text(face="italic",size=7.5),
+            legend.margin=margin(0,0,0,0,unit="mm"),
+            legend.spacing=unit(0,"mm"),
+            legend.justification=c(1,0),
+            plot.margin=unit(c(0,0,0,0),"mm"),
+            strip.background = element_blank(),
+            strip.text.x = element_blank()
+            )
+      + facet_wrap(~facet,scales="free")
+      )
 @ 
 \caption{Core Placenta Transcriptome.
   \Sexpr{core.placenta.transcriptome.long[housekeeping==FALSE,length(unique(human_name))]}
