add additional references to bibtex file

--- a/manuscript/references_clean.bib
+++ b/manuscript/references_clean.bib
@@ -225,6 +225,18 @@
   VOLUME = {486},
 }
 
+@ARTICLE{Altenhoff.ea2015:OMAorthologydatabasein,
+  ABSTRACT = {The Orthologous Matrix (OMA) project is a method and associated database inferring evolutionary relationships amongst currently 1706 complete proteomes (i.e. the protein sequence associated for every protein-coding gene in all genomes). In this update article, we present six major new developments in OMA: (i) a new web interface; (ii) Gene Ontology function predictions as part of the OMA pipeline; (iii) better support for plant genomes and in particular homeologs in the wheat genome; (iv) a new synteny viewer providing the genomic context of orthologs; (v) statically computed hierarchical orthologous groups subsets downloadable in OrthoXML format; and (vi) possibility to export parts of the all-against-all computations and to combine them with custom data for 'client-side' orthology prediction. OMA can be accessed through the OMA Browser and various programmatic interfaces at http://omabrowser.org.},
+  AUTHOR = {Altenhoff, Adrian M and Škunca, Nives and Glover, Natasha and Train, Clément-Marie and Sueki, Anna and Piližota, Ivana and Gori, Kevin and Tomiczek, Bartlomiej and Müller, Steven and Redestig, Henning and Gonnet, Gaston H and Dessimoz, Christophe},
+  DATE = {2015-01},
+  DOI = {10.1093/nar/gku1158},
+  JOURNALTITLE = {Nucleic Acids Res.},
+  NUMBER = {Database issue},
+  PAGES = {240--249},
+  TITLE = {The OMA orthology database in 2015: function predictions, better plant support, synteny view and other improvements},
+  VOLUME = {43},
+}
+
 @ARTICLE{Durinck.ea2009:Mappingidentifiersforintegration,
   ABSTRACT = {Genomic experiments produce multiple views of biological systems, among them are DNA sequence and copy number variation, and mRNA and protein abundance. Understanding these systems needs integrated bioinformatic analysis. Public databases such as Ensembl provide relationships and mappings between the relevant sets of probe and target molecules. However, the relationships can be biologically complex and the content of the databases is dynamic. We demonstrate how to use the computational environment R to integrate and jointly analyze experimental datasets, employing BioMart web services to provide the molecule mappings. We also discuss typical problems that are encountered in making gene-to-transcript-to-protein mappings. The approach provides a flexible, programmable and reproducible basis for state-of-the-art bioinformatic data integration.},
   AUTHOR = {Durinck, Steffen and Spellman, Paul T and Birney, Ewan and Huber, Wolfgang},
@@ -285,6 +297,17 @@
   VOLUME = {27},
 }
 
+@ARTICLE{Armstrong2008:function2gene,
+  ABSTRACT = {BACKGROUND: Many common disorders have multiple genetic components which convey increased susceptibility. SNPs have been used to identify genetic components which are associated with a disease. Unfortunately, many studies using these methods suffer from low reproducibility due to lack of power. RESULTS: We present a set of programs which implement a novel method for searching for disease-associated genes using prior information to select and order genes from publicly available databases by their prior likelihood of association with the disease. These programs were used in a published study of childhood-onset SLE which yielded novel associations with modest sample size. CONCLUSION: Using prior information to decrease the size of the problem space to an amount commensurate with available samples and resources while maintaining appropriate power enables researchers to increase their likelihood of discovering reproducible associations.},
+  AUTHOR = {Armstrong, Don L and Jacob, Chaim O and Zidovetzki, Raphael},
+  DATE = {2008},
+  DOI = {10.1186/1471-2105-9-311},
+  JOURNALTITLE = {BMC Bioinformatics},
+  PAGES = {311},
+  TITLE = {Function2Gene: a gene selection tool to increase the power of genetic association studies by utilizing public databases and expert knowledge},
+  VOLUME = {9},
+}
+
 @ARTICLE{Petsas.ea2012:Aberrantexpressionofcorticotropin-releasing,
   ABSTRACT = {Corticotropin-releasing hormone (CRH) and its receptors are expressed in human placenta. Recently, the impaired function of this system has been associated with a number of complications of pregnancy, including pre-eclampsia. The aim of the study was to test the hypothesis that CRH participates in the pathophysiology of pre-eclampsia through the induction of macrophage-mediated apoptosis of extravillous trophoblasts (EVTs). We found that the expression of CRH was increased in the EVT of the placental bed biopsy specimens from pre-eclamptic pregnancies (1.8-fold increase; P < 0.05). In addition, significantly larger numbers of apoptotic EVT were detected in pre-eclamptic placentas compared with normal ones (P < 0.05), and only in pre-eclamptic placentas, decidual macrophages were found to be Fas ligand (FasL)-positive. In vitro studies on the effect of CRH on human macrophages suggested that CRH induced the expression of the FasL protein in human macrophages and potentiated their ability to induce the apoptosis of a Fas-expressing EVT-based hybridoma cell line in co-cultures. These findings demonstrate a possible mechanism by which the aberrant expression of CRH in pre-eclampsia may activate the FasL-positive decidual macrophages, impair the physiological turnover of EVT and eventually disturb placentation.},
   AUTHOR = {Petsas, G and Jeschke, U and Richter, D U and Minas, V and Hammer, A and Kalantaridou, S and Toth, B and Tsatsanis, C and Friese, K and Makrigiannakis, A},
@@ -343,6 +366,18 @@
   PAGES = {569--574},
   TITLE = {Human housekeeping genes, revisited},
   VOLUME = {29},
+}
+
+@ARTICLE{Yanai.ea2005:Genome-widemidrangetranscriptionprofiles,
+  ABSTRACT = {MOTIVATION: Genes are often characterized dichotomously as either housekeeping or single-tissue specific. We conjectured that crucial functional information resides in genes with midrange profiles of expression. RESULTS: To obtain such novel information genome-wide, we have determined the mRNA expression levels for one of the largest hitherto analyzed set of 62 839 probesets in 12 representative normal human tissues. Indeed, when using a newly defined graded tissue specificity index tau, valued between 0 for housekeeping genes and 1 for tissue-specific genes, genes with midrange profiles having 0.15< tau<0.85 were found to constitute >50\% of all expression patterns. We developed a binary classification, indicating for every gene the I(B) tissues in which it is overly expressed, and the 12-I(B) tissues in which it shows low expression. The 85 dominant midrange patterns with I(B)=2-11 were found to be bimodally distributed, and to contribute most significantly to the definition of tissue specification dendrograms. Our analyses provide a novel route to infer expression profiles for presumed ancestral nodes in the tissue dendrogram. Such definition has uncovered an unsuspected correlation, whereby de novo enhancement and diminution of gene expression go hand in hand. These findings highlight the importance of gene suppression events, with implications to the course of tissue specification in ontogeny and phylogeny. AVAILABILITY: All data and analyses are publically available at the GeneNote website, http://genecards.weizmann.ac.il/genenote/ and, GEO accession GSE803. CONTACT: doron.lancet@weizmann.ac.il SUPPLEMENTARY INFORMATION: Four tables available at the above site.},
+  AUTHOR = {Yanai, Itai and Benjamin, Hila and Shmoish, Michael and Chalifa-Caspi, Vered and Shklar, Maxim and Ophir, Ron and Bar-Even, Arren and Horn-Saban, Shirley and Safran, Marilyn and Domany, Eytan and Lancet, Doron and Shmueli, Orit},
+  DATE = {2005-03},
+  DOI = {10.1093/bioinformatics/bti042},
+  JOURNALTITLE = {Bioinformatics},
+  NUMBER = {5},
+  PAGES = {650--659},
+  TITLE = {Genome-wide midrange transcription profiles reveal expression level relationships in human tissue specification},
+  VOLUME = {21},
 }
 
 @ARTICLE{Hutchinson.ea2011:Molecularregulatorsofresolution,
